specs/aks/azure-internal-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: encryptor-lb
  namespace: buildit-jenkins
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 4567
  selector:
    app: encryptor
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-lb
  namespace: buildit-jenkins
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: tcp
    port: 5000
    targetPort: 5000
  selector:
    app: jenkins
