specs/aks/buildit-jenkins.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: buildit-jenkins
  namespace: buildit-jenkins
spec:
  ports:
  - name: ui
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: jnlp
    protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildit-jenkins
  namespace: buildit-jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - image: builditdigital/jenkins-image:2.6.0-alpine
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: startup-secret
          mountPath: "/var/run/jenkins/startup-secret"
          readOnly: true
      volumes:
      - name: startup-secret
        secret:
          secretName: jenkins-startup-secret
---
apiVersion: v1
kind: Service
metadata:
  name: buildit-encryptor
  namespace: buildit-jenkins
spec:
  ports:
  - name: ui
    protocol: TCP
    port: 80
    targetPort: 4567
  selector:
    app: encryptor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildit-encryptor
  namespace: buildit-jenkins
spec:
  selector:
    matchLabels:
      app: encryptor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: encryptor
    spec:
      containers:
      - image: builditdigital/encryptor-api:2.4.0
        name: encryptor
        ports:
        - containerPort: 4567
          name: http
