specs/aks/buildit-jenkins-ingress-aks-http.yaml
# https://docs.microsoft.com/en-us/azure/aks/http-application-routing
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildit-jenkins-ingress
  namespace: buildit-jenkins
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  # Your DNS has to be able to resolve this hostname
  - host: buildit-jenkins.5b6e485d-943c-4deb-ad40-7b171f9f7a0f.uksouth.aksapp.io
    http:
      paths:
      - backend: 
          serviceName: buildit-jenkins
          servicePort: 80
        path: /
