specs/aks/buildit-jenkins-ingress-https-host-routing.yaml
# https://docs.microsoft.com/en-us/azure/aks/ingress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildit-jenkins-ingress
  namespace: buildit-jenkins
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - jenkins.deggymacets.com
    - encryptor.deggymacets.com
    secretName: tls-secret
  rules:
  # Your DNS has to be able to resolve this hostname
  - host: jenkins.deggymacets.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: buildit-jenkins
          servicePort: 80
  - host: encryptor.deggymacets.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: buildit-encryptor
          servicePort: 80
